Update project layout, add descriptive statistics, and fix icon visibility

--- a/style.css
+++ b/style.css
@@ -588,7 +588,7 @@ img {
 
 .project-icon-overlay {
     position: absolute;
-    bottom: -20px;
+    bottom: 20px;
     right: 24px;
     width: 50px;
     height: 50px;
